2010-06-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-view-core.xml
	(calendar-editable-item.startEditing): don't attempt to hide the
	event location label if it's null.

2010-06-08  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (sendItems): removed
	duplicate "Recipient" header for participant recipients. Also,
	NON-PARTICIPANT recipients must continue receiving email
	exchanges.

2010-05-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js:
	(conflictHandler._readFreeBusy): invokes "this.onResult" directly
	when entries are available from the cache.

	* src/calendar/base/content/sun-calendar-event-dialog-freebusy.xml:
	(freebusy-grid.nextSlot): we shift the start date when its hours
	component passes over the day end hour.

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js:
	(onNextSlot) removed the handling of the time range menu, which
	was removed. Moved the time range code into "initTimeRange".

	* src/calendar/base/content/calendar-task-tree.xml:
	(calendar-task-tree.mTaskTreeObserver.onAdditem)
	(calendar-task-tree.mTaskTreeObserver.onModifyitem): prevent
	GUI operations for items in calendars that should not appear in
	the today pane.

	* src/calendar/base/content/calendar-item-editing.js:
	(doTransaction): add an entry to the new global
	"gActiveOperations" dictionary when a transaction is in progress
	so that two transactions cannot occur concurrently on the same
	item.

2010-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-multiday-view.xml:
	(calendar-event-box.setEditableLabel) set the value of the
	location label if the item contains such a value.

	* src/calendar/base/content/calendar-view-core.xml:
	(calendar-editable-item.eventLocationLabel): new accessor that
	returns the new XUL:element representing the event location.