@@ -48,6 +48,7 @@
 <!ENTITY pref.categories.editButton.accesskey "E">
 <!ENTITY pref.categories.removeButton.label "Fjern">
 <!ENTITY pref.categories.removeButton.accesskey "F">
+<!ENTITY pref.categories.resetButton.label "Revert to defaults">
 <!ENTITY pref.categories.name.label "Navn">
 <!ENTITY pref.categories.color.label "Farve">
 <!ENTITY pref.categories.usecolor.label "Brug farve">
