@@ -48,6 +48,7 @@
 <!ENTITY pref.categories.editButton.accesskey "E">
 <!ENTITY pref.categories.removeButton.label "Ezabatu">
 <!ENTITY pref.categories.removeButton.accesskey "Z">
+<!ENTITY pref.categories.resetButton.label "Revert to defaults">
 <!ENTITY pref.categories.name.label "Izena">
 <!ENTITY pref.categories.color.label "Kolorea">
 <!ENTITY pref.categories.usecolor.label "Kolorea erabili">
