@@ -43,6 +43,7 @@
 <!ENTITY pref.categories.editButton.accesskey "M">
 <!ENTITY pref.categories.removeButton.label "Rimuovi">
 <!ENTITY pref.categories.removeButton.accesskey "R">
+<!ENTITY pref.categories.resetButton.label "Revert to defaults">
 <!ENTITY pref.categories.name.label "Nome">
 <!ENTITY pref.categories.color.label "Colore">
 <!ENTITY pref.categories.usecolor.label "Usa colore">
