@@ -48,6 +48,7 @@
 <!ENTITY pref.categories.editButton.accesskey "E">
 <!ENTITY pref.categories.removeButton.label "ამოღება">
 <!ENTITY pref.categories.removeButton.accesskey "R">
+<!ENTITY pref.categories.resetButton.label "Revert to defaults">
 <!ENTITY pref.categories.name.label "სახელი">
 <!ENTITY pref.categories.color.label "ფერი">
 <!ENTITY pref.categories.usecolor.label "ფერის გამოყენება">
