@@ -50,6 +50,7 @@
 <!ENTITY pref.categories.editButton.accesskey "E">
 <!ENTITY pref.categories.removeButton.label "Usuń">
 <!ENTITY pref.categories.removeButton.accesskey "U">
+<!ENTITY pref.categories.resetButton.label "Revert to defaults">
 <!ENTITY pref.categories.name.label "Nazwa">
 <!ENTITY pref.categories.color.label "Kolor">
 <!ENTITY pref.categories.usecolor.label "Użyj koloru:">
