@@ -48,6 +48,7 @@
 <!ENTITY pref.categories.editButton.accesskey "E">
 <!ENTITY pref.categories.removeButton.label "Șterge">
 <!ENTITY pref.categories.removeButton.accesskey "r">
+<!ENTITY pref.categories.resetButton.label "Revert to defaults">
 <!ENTITY pref.categories.name.label "Nume">
 <!ENTITY pref.categories.color.label "Culoare">
 <!ENTITY pref.categories.usecolor.label "Colorează">
