@@ -43,6 +43,7 @@
 <!ENTITY pref.categories.editButton.accesskey "E">
 <!ENTITY pref.categories.removeButton.label "删除">
 <!ENTITY pref.categories.removeButton.accesskey "R">
+<!ENTITY pref.categories.resetButton.label "Revert to defaults">
 <!ENTITY pref.categories.name.label "名称">
 <!ENTITY pref.categories.color.label "颜色">
 <!ENTITY pref.categories.usecolor.label "使用颜色">
